GNOME Bugzilla – Bug 612511
Fixes for dispose and finalize
Last modified: 2010-03-11 20:10:48 UTC
* Add missing chain-up for dispose and finalize methods * ShellGenericContainer needs to destroy its children in dispose() * Fix variable naming and excess casts in st_label_dispose()
Created attachment 155801 [details] [review] Fixes for dispose and finalize
Created attachment 155803 [details] [review] Fixes for dispose and finalize Compilation fix
Comment on attachment 155803 [details] [review] Fixes for dispose and finalize looks good
Attachment 155803 [details] pushed as 163b2d0 - Fixes for dispose and finalize